<resources>
    <string name="app_name">解憂APP</string>
    <string name="ID">帳號</string>
    <string name="Psw">密碼</string>
    <string name="Login">登入</string>
    <string name="Forget">忘記密碼?</string>
    <string name="function1">休閒娛樂</string>
    <string name="function2">心情紀錄</string>
    <string name="function3">音樂治療</string>
    <string name="function4">運動紓壓</string>
    <string name="function5">常見問題</string>
    <string name="exhibition">展覽</string>
    <string name="theater">劇場</string>
    <string name="speech">演講</string>
    <string name="article">文章</string>
    <string name="sportsnotification">運動提醒</string>
    <string name="sportsrecord">運動紀錄</string>
    <string name="distance">距離:</string>
    <string name="cal">消耗熱量:</string>
    <string name="speed">速度</string>
    <string name="time">時間:</string>
    <string name="map">地圖</string>
    <string name="sportsevents">更換項目</string>
    <string name="detection">基礎檢測量表</string>
    <string name="mood" translatable="false">心情紀錄</string>
    <string name="diary">心情日記</string>
    <string name="sum">統計量表</string>
    <string name="back">返回</string>
    <string name="music">音樂治療</string>
    <string name="relax">放鬆紓壓</string>
    <string name="concentrate">集中注意力</string>
    <string name="sleep">睡眠</string>
    <string name="exercise">運動</string>
    <string name="set">設定</string>
    <string name="playTime">播放時間</string>
    <string name="mode">播放模式</string>
    <string name="normal">標準</string>
    <string name="random">隨機</string>
    <string name="hour">小時</string>
    <string name="minute">分</string>
    <string name="next">next</string>
    <string name="play">play</string>
    <string name="previous">previous</string>
    <string name="running">跑步</string>
    <string name="bike">單車</string>
    <string name="swim">游泳</string>
    <string name="basketball">籃球</string>
    <string name="baseball">棒球</string>
    <string name="badminton">羽球</string>
    <string name="volleyball">排球</string>
    <string name="rope">跳繩</string>
    <string name="hula">呼拉圈</string>
    <string name="howmanysteps">跳?下:</string>
    <string name="howmanycircles">搖?圈:</string>
    <string name="sportsstart">開始運動</string>
    <string name="squatting">深蹲</string>
    <string name="upanddown">伏地挺身</string>
    <string name="situps">仰臥起坐</string>
    <string name="howmanysquat">蹲?下:</string>
    <string name="howmany">做?下:</string>
    <string name="submit">送出</string>
    <string name="Register">註冊</string>
    <string name="Confirm">確認</string>
    <string name="date">日期</string>
    <string name="content">將今天發生的事情記錄下來吧！</string>
    <string name="GoClick">請選擇適合今天的心情！</string>
    <string name="Question">常見問題</string>
    <string name="Save">儲存</string>
    <string name="select">選擇影片</string>
    <string name="sportfinish">結束運動</string>
    <string name="Leisure">休閒娛樂</string>
    <string name="Mood">心情紀錄</string>
    <string name="choose">心情指數</string>
    <string name="sport">運動紓壓</string>
    <string name="happy">開心</string>
    <string name="laugh">大好</string>
    <string name="angry">生氣</string>
    <string name="sad">難過</string>
    <string name="lovely">幸福</string>
    <string name="surprise">驚訝</string>
    <string name="Information">相關資訊</string>
</resources>
