<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.swlab.myapplication.Sports_Content">

    <Button
        android:id="@+id/hula_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hula"
        app:layout_constraintRight_toLeftOf="@+id/situps_btn"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/swim_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/rope_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rope"
        android:layout_marginRight="51dp"
        android:layout_marginEnd="51dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/upanddown_btn" />

    <Button
        android:id="@+id/swim_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swim"
        app:layout_constraintRight_toLeftOf="@+id/rope_btn"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/bike_btn" />

    <Button
        android:id="@+id/situps_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginTop="40dp"
        android:text="@string/situps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rope_btn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/squatting_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginTop="50dp"
        android:text="@string/squatting"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/upanddown_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginTop="40dp"
        android:text="@string/upanddown"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/squatting_btn" />

    <Button
        android:id="@+id/bike_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bike"
        app:layout_constraintRight_toLeftOf="@+id/upanddown_btn"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/run_btn" />

    <Button
        android:id="@+id/run_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/running"
        app:layout_constraintRight_toLeftOf="@+id/squatting_btn"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp" />
</android.support.constraint.ConstraintLayout>
